# speiseplan-cli

./: Cargo.toml  LICENSE  README.md  config.toml.example  flake.nix
.github/workflows/: build-release.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  model.rs  url.rs  view.rs
