[package]
name = "speiseplan-cli"
version = "1.0.15"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "cargo"] }
console = "0.16.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
toml = "0.8.23"
ureq = { version = "3.0.12", features = ["json"] }
workdays = "0.1.3"

